fix(styles): share-url component shadow and line-height on Safari

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -359,10 +359,17 @@ random-message {
 	}
 }
 
-.share-panel .share-button {
-	border-color: transparent;
-	background-color: transparent;
-	padding: 0;
+.share-panel {
+	share-url {
+		line-height: 0;
+	}
+	
+	.share-button {
+		border-color: transparent;
+		background-color: transparent;
+		padding: 0;
+		box-shadow: none;
+	}
 }
 
 .pagination {
